Fixed alignment issues with Avatars

--- a/imports/scss/base.scss
+++ b/imports/scss/base.scss
@@ -9,6 +9,10 @@ body {
   /* background-color: #343a40; */
 }
 
+.author-heading {
+  font-size: 1.2rem;
+}
+
 .feature-heading {
   background-color: rgba(0, 0, 0, 0.1);
   padding: 0.5rem;
